# YoungRPC

./: CMakeLists.txt  README.md
example/: friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  FriendService.cpp  UserService.cpp
example/caller/: CMakeLists.txt  CallFriendService.cpp  CallUserService.cpp
src/: CMakeLists.txt  Logger.cpp  MprpcApplication.cpp  MprpcChannel.cpp  MprpcConfig.cpp  MprpcController.cpp  RPCHeader.pb.cc  RPCHeader.pb.h  RPCHeader.proto  RPCProvider.cpp  ZookeeperUtil.cpp
src/include/: LockQueue.h  Logger.h  MprpcApplication.h  MprpcChannel.h  MprpcConfig.h  MprpcController.h  NonCopyable.h  RPCProvider.h  ZookeeperUtil.h
test/protobuf/: main.cpp  test.pb.cc  test.pb.h  test.proto
